prd_package/objects/Flight__c.object
<CustomObject>
    <fields>
        <fullName>STA__c</fullName>
        <description>Used for display</description>
        <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;))</formula>
        <label>STA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_LT_DateTime__c</fullName>
        <formula>DATETIMEVALUE( STD_LT__c )</formula>
        <label>STD LT DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>STD_LT_Datetime_F__c</fullName>
        <formula>MID(STD_LT__c , 9, 2) + &apos;/&apos; + 
MID(STD_LT__c , 6, 2) + &apos;/&apos; + 
MID(STD_LT__c , 1, 4) + &apos; &apos; + 
MID(STD_LT__c , 12, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STD LT (Datetime)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_LT__c</fullName>
        <label>STD LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_STA__c</fullName>
        <formula>STD__c &amp; &quot; / &quot; &amp; STA__c</formula>
        <label>STD / STA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_UTC_DateTime__c</fullName>
        <formula>DATETIMEVALUE( STD_UTC__c )</formula>
        <label>STD UTC DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>STD_UTC_Display__c</fullName>
        <formula>LPAD(
IF(LEFT(SUBSTITUTE(LEFT(RIGHT( STD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( STD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( STD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( STD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;))

, 5 , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STD (UTC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_UTC_TEST_del__c</fullName>
        <formula>TEXT(DAY(DATEVALUE(STD_UTC__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE( STD_UTC__c ))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE( STD_UTC__c ))) + &quot; &quot; + LEFT(RIGHT(STD_UTC__c,Find(&quot; &quot;, STD_UTC__c)-2), 6)</formula>
        <label>STD_UTC_TEST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_UTC__c</fullName>
        <label>STD UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD__c</fullName>
        <description>Used for display</description>
        <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( STD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( STD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( STD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( STD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;))</formula>
        <label>STD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduling_Type__c</fullName>
        <formula>CASE(MID(Flight_Number__c, 3, 1),
&quot;8&quot;, &quot;Non-Schedule&quot;,
&quot;Schedule&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Used for display</description>
        <formula>Departure_STN__c + &quot;-&quot; +  Arrival_STN__c</formula>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_txt__c</fullName>
        <description>For M2

Maintenance Case Color Code</description>
        <formula>IMAGE(&quot;https://c.cs6.content.force.com/servlet/servlet.ImageServer?id=015N0000000W2ds&amp;oid=00DN0000000AfvZ&amp;lastMod=1475563007000&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Elapsed_Time__c</fullName>
        <formula>IF( Leg_Number__c &gt; 1, 
LPAD(
LEFT( 
TEXT(
(STA_UTC_DateTime__c -  First_Leg__r.STD_UTC_DateTime__c) * 24
)
,1)
,2 ,&quot;0&quot;)
&amp;
TEXT(
FLOOR( 
VALUE(
MID(TEXT(
    (STA_UTC_DateTime__c -  First_Leg__r.STD_UTC_DateTime__c) * 24
    ), 
 FIND(&apos;.&apos;, 
     TEXT(
    (STA_UTC_DateTime__c -  First_Leg__r.STD_UTC_DateTime__c) * 24
    ) )+ 1
   , 2)
)
 * 0.6)
)
, Flying_Time_Elapsed_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Elapsed Time</label>
        <type>Text</type>
    </fields>
    <label>Flight</label>
    <listViews>
        <fullName>AOJ</fullName>
        <columns>NAME</columns>
        <columns>Routing__c</columns>
        <columns>Sector__c</columns>
        <columns>Flight_Date_UTC__c</columns>
        <columns>Flight_Date_F__c</columns>
        <columns>STA__c</columns>
        <columns>STD__c</columns>
        <columns>Leg_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Departure_STN__c</field>
            <operation>equals</operation>
            <value>AOJ</value>
        </filters>
        <filters>
            <field>STA_LT_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>AOJ</label>
        <language>en_US</language>
        <sharedTo>
            <group>Ground_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Routing__c</columns>
        <columns>Sector__c</columns>
        <columns>STD__c</columns>
        <columns>ETD__c</columns>
        <columns>STA__c</columns>
        <columns>ETA__c</columns>
        <columns>Flying_Time_Elapsed_Time__c</columns>
        <columns>Total_Elapsed_Time__c</columns>
        <columns>Departure_STN_Name__c</columns>
        <columns>Arrival_STN_Name__c</columns>
        <columns>Leg_Number__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>Ground_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Flight_Schedule</fullName>
        <columns>NAME</columns>
        <columns>AircraftId__c</columns>
        <columns>Departure_STN__c</columns>
        <columns>Arrival_STN__c</columns>
        <columns>Aircraft_Type__c</columns>
        <columns>BAY_ARR_DEP__c</columns>
        <columns>STA_UTC_Display__c</columns>
        <columns>ETA_UTC_Display__c</columns>
        <columns>STD_UTC_Display__c</columns>
        <columns>ETD_UTC_Display__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Flight Schedule</label>
        <language>en_US</language>
        <sharedTo>
            <group>Aircraft_Maintenance_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BKK</fullName>
        <columns>NAME</columns>
        <columns>Routing__c</columns>
        <columns>Sector__c</columns>
        <columns>Flight_Date_UTC__c</columns>
        <columns>Flight_Date_F__c</columns>
        <columns>STA__c</columns>
        <columns>STD__c</columns>
        <columns>Leg_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Departure_STN__c</field>
            <operation>equals</operation>
            <value>BKK</value>
        </filters>
        <filters>
            <field>STA_LT_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>BKK</label>
        <language>en_US</language>
        <sharedTo>
            <group>Ground_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTS</fullName>
        <columns>NAME</columns>
        <columns>Routing__c</columns>
        <columns>Sector__c</columns>
        <columns>Flight_Date_UTC__c</columns>
        <columns>Flight_Date_F__c</columns>
        <columns>STA__c</columns>
        <columns>STD__c</columns>
        <columns>Leg_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Departure_STN__c</field>
            <operation>equals</operation>
            <value>CTS</value>
        </filters>
        <filters>
            <field>STA_LT_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>CTS</label>
        <language>en_US</language>
        <sharedTo>
            <group>Ground_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FUK</fullName>
        <columns>NAME</columns>
        <columns>Routing__c</columns>
        <columns>Sector__c</columns>
        <columns>Flight_Date_UTC__c</columns>
        <columns>Flight_Date_F__c</columns>
        <columns>STA__c</columns>
        <columns>STD__c</columns>
        <columns>Leg_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Departure_STN__c</field>
            <operation>equals</operation>
            <value>FUK</value>
        </filters>
        <filters>
            <field>STA_LT_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>FUK</label>
        <language>en_US</language>
        <sharedTo>
            <group>Ground_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flight_Schedule</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>AircraftId__c</columns>
        <columns>Departure_STN__c</columns>
        <columns>Arrival_STN__c</columns>
        <columns>Aircraft_Type__c</columns>
        <columns>BAY_ARR_DEP__c</columns>
        <columns>STA_UTC_Display__c</columns>
        <columns>ETA_UTC_Display__c</columns>
        <columns>STD_UTC_Display__c</columns>
        <columns>ETD_UTC_Display__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>STA_UTC_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>STD_UTC_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Flight Schedule</label>
        <language>en_US</language>
        <sharedTo>
            <group>Aircraft_Maintenance_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HND</fullName>
        <columns>NAME</columns>
        <columns>Routing__c</columns>
        <columns>Sector__c</columns>
        <columns>Flight_Date_UTC__c</columns>
        <columns>Flight_Date_F__c</columns>
        <columns>STA__c</columns>
        <columns>STD__c</columns>
        <columns>Leg_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Departure_STN__c</field>
            <operation>equals</operation>
            <value>HND</value>
        </filters>
        <filters>
            <field>STA_LT_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>HND</label>
        <language>en_US</language>
        <sharedTo>
            <group>Ground_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Station</fullName>
        <columns>NAME</columns>
        <columns>Routing__c</columns>
        <columns>Sector__c</columns>
        <columns>Flight_Date_UTC__c</columns>
        <columns>Flight_Date_F__c</columns>
        <columns>STA__c</columns>
        <columns>STD__c</columns>
        <columns>Leg_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Station_F__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>STA_LT_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Station</label>
        <language>en_US</language>
        <sharedTo>
            <role>Ground_Customer_Service_Abroad_Station</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <recordTypes>
        <fullName>Flight</fullName>
        <active>true</active>
        <label>Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Flight</fullName>
        <active>true</active>
        <label>New Flight</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>